style/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: black;
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  color: white;
}

.container {
  gap: 10px;
}

.left-sidebar {
  position: fixed;
  top: 10px;
  left: 10px;

  height: calc(100vh - 20px);
  width: 25vw;
  flex-direction: column;
  gap: 10px;
}

.left-sidebar .home li {
  margin: 15px 0 0 15px;
  list-style: none;
  display: flex;
  gap: 8px;
  align-items: center;
}

.left-sidebar .library {
  position: relative;
  flex-grow: 1;
}

.left-sidebar .library .header {
  gap: 8px;
  margin-bottom: 10px;
}

.left-sidebar .library h2 {
  font-size: 1.1rem;
}

.left-sidebar .library .song-list {
  margin: 10px 0;
  height: 54vh;
  overflow-y: auto;
}

.left-sidebar .library .song-list li {
  margin: 10px 0;
  cursor: pointer;
  font-size: 14px;

  display: grid;
  grid-template-columns: 26px auto 30px;
  align-items: center;
  gap: 10px;
}

.left-sidebar .library .song-list .author {
  color: #929292;
  font-size: 0.8rem;
}

.left-sidebar .library .song-list .play-now {
  justify-self: end;
}

.left-sidebar .footer {
  position: absolute;
  bottom: 10px;
}

.left-sidebar .footer a {
  color: #929292;
  text-decoration: none;
  font-size: 11px;
}

.left-sidebar .footer .links-list {
  margin: 4px 0;
  gap: 4px 10px;
  flex-wrap: wrap;
}

.right-main {
  margin-left: calc(25vw + 10px);
  width: calc(75vw - 20px);
  height: calc(100vh - 20px);
  display: flex;
  flex-direction: column;
}

.right-main .header {
  justify-content: space-between;
  z-index: 2;
  height: 42px;

  position: sticky;
  top: 0;
}

.right-main .header > * {
  margin: 8px 6px;
}

.right-main .header svg {
  background-color: #000;
  border-radius: 50%;
  margin: 0 4px;
}

.right-main .header .buttons * {
  margin: 0 6px;
  padding: 10px;
  width: 90px;

  border-radius: 30px;
  border: none;

  font-size: 14px;
  font-weight: 900;
  font-family: inherit;
}

.right-main .header .buttons #sign-up-btn {
  color: #a7a7a7;
  background-color: transparent;
}

.right-main .header .buttons #log-in-btn:hover {
  background-color: #ffffff;
  padding: 11px;
}

.right-main .content {
  width: 100%;
  flex-grow: 1;
  overflow: auto;
}

.right-main .content h1 {
  padding: 6px 16px;
  font-size: 24px;
}

.right-main .content .cardContainer {
  flex-wrap: wrap;
  row-gap: 10px;
}

.right-main .card {
  width: 180px;
  padding: 12px;
  position: relative;
}

.right-main .card img {
  border-radius: 6px;
}

.right-main .card:hover {
  background-color: #1a1a1a;
  .play {
    opacity: 1;
  }
}

.right-main .card .play:hover {
  top: 142px;
  width: 20px;
  height: 20px;
}

.right-main .card .play {
  position: absolute;
  top: 144px;
  right: 24px;
  opacity: 0;

  width: 18px;
  height: 18px;
  background-color: #1ed760;
  border-radius: 50%;
  padding: 10px;

  transition: opacity 0.4s ease-out;
  box-shadow: 0px 4px 8px 0px #2d2c2c;
}

.right-main .cardDescription {
  padding: 8px 10px 0 0;
  flex-direction: column;
  gap: 4px;
  align-items: flex-start;
}

.right-main .cardDescription h2 {
  font-size: 14px;
}

.right-main .cardDescription p {
  font-size: 12px;
  color: #a2a2a2;
}

.right-main .play-bar {
  position: sticky;
  bottom: 0;

  width: 100%;
  background-color: #1b2217;
}

.right-main .play-bar .play-details {
  padding: 6px 10px 12px;
  font-size: 14px;
  font-weight: 200;

  display: grid;
  grid-template-columns: 4fr 3fr 4fr;
}

.right-main .play-bar #song-time {
  justify-self: end;
}

.right-main .play-bar .control-btn {
  justify-content: center;
  gap: 16px;
}

.right-main .play-bar .control-btn button {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.right-main .play-bar .seek {
  padding: 8px 0;
}

.right-main .play-bar .seek-bar {
  height: 2px;
  width: 96%;
  margin: auto;
  background-color: white;
  border-radius: 2px;
}

.right-main .play-bar .seek-bar .seek-complete {
  height: 2px;
  width: 0%;
  border-radius: 2px;
  background-color: red;
  transition: width 0.5s;
}

.right-main .play-bar .seek-bar .circle {
  height: 2px;
  width: 2px;
  border-radius: 50%;
  background-color: red;
  position: relative;
  left: 100%;
}

.right-main .play-bar .seek:hover {
  .circle {
    outline: 4px solid red;
  }
}

